# sticky-Fingers

./: .env.example  .gitignore  PREREGISTRATION.md  README.md  deploy_vaults.py  progress.md  pyproject.toml  requirements.txt  run_l3.py  run_l3b.py  run_live.py
contracts/: README.md
contracts/src/: AgentVault.sol
contracts/test/: AgentVault.t.sol
results/: summary.csv
src/sticky_fingers/: __init__.py  agent.py  analyze.py  attacks.py  authorization.py  contract_ledger.py  ledger.py  metrics.py  onchain_ledger.py  runner.py  scenario.py  tools.py
tests/: test_authorization.py  test_ledger.py  test_pipeline_offline.py
