[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sticky-fingers"
version = "0.1.0"
description = "Does payment-authorization architecture contain a misbehaving AI agent?"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.40",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]
